--- a/package.json
+++ b/package.json
@@ -12,33 +12,36 @@
     "@mdx-js/react": "^1.4.0",
     "@mdx-js/tag": "^0.20.3",
     "gatsby": "^2.14.4",
-    "gatsby-image": "^2.0.22",
+    "gatsby-image": "^2.2.40",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-mdx": "^1.0.33",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.6",
-    "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.2.27",
+    "gatsby-plugin-use-dark-mode": "^1.1.2",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^3.1.19",
     "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.2",
     "gatsby-transformer-remark": "^2.1.6",
-    "gatsby-transformer-sharp": "^2.1.3",
+    "gatsby-transformer-sharp": "^2.3.14",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^0.1.5",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.9.0",
     "react-live": "^2.2.0",
     "react-typography": "^0.16.13",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.17",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typography-theme-wordpress-2016": "^0.16.19",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^6.2.2",
