--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-name: Production workflow
+name: Production
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
-        
+
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
