--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,4 +1,4 @@
-name: Staging workflow
+name: Staging
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
-        
+
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
