--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -27,4 +27,4 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.STAGING_NETLIFY_SITE_ID }}
         with:
           args: deploy --dir=build --prod
-          secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+          secrets: ['NETLIFY_AUTH_TOKEN', 'NETLIFY_SITE_ID']
