--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,30 +1,34 @@
-name: Production workflow
+name: Deploy
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - master
+      - release/*
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v1
-        
-      - name: Use Node.js 12.x
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-      - run: npm install
-      - run: npm run build --if-present
-
-      - name: Deploy to netlify
+          node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+        run: |
+          npm install
+      - name: Build
+        run: |
+          npm run build --if-present
+      - name: Deploy to Netlify
         uses: netlify/actions/cli@master
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.PROD_NETLIFY_SITE_ID }}
         with:
-          args: deploy --dir=build --prod
-          secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+          args: deploy --site ${{ secrets.NETLIFY_SITE_ID }} --auth ${{ secrets.NETLIFY_AUTH_TOKEN }} --prod --dir=public
+        env:
+          CD: true
