Created initial testing files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-name: Test
+name: Test workflow
 
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   test:
@@ -13,9 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v1
 
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
       - name: Cypress run
         uses: cypress-io/github-action@v1
         with:
-          build: npm run build
-          start: npm run dev
-          wait-on: http://localhost:8000
+          build: gatsby build
+          start: gatsby develop
+          wait-on: http://localhost:3000
+          browser: chrome
