--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - main
+      - dev
 
 jobs:
   test:
@@ -23,5 +24,5 @@ jobs:
         with:
           build: gatsby build
           start: gatsby develop
-          wait-on: http://localhost:3000
+          wait-on: http://localhost:8000
           browser: chrome
