--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v1
         with:
-          build: gatsby build
-          start: gatsby develop
+          build: npm run build
+          start: npm run dev
           wait-on: http://localhost:8000
           browser: chrome
