--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-draggable": "^4.4.3"
+    "react-draggable": "^4.4.3",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
